Add a hasRuns method to ExperimentService